# proto-docser-hs

./: README.md  proto-docser.cabal
app/: EncodeDocument.hs  Main.hs  Types.hs
example/: Example.hi  Example.hs  Example.json
