cabal-version:      2.4
name:               proto-docser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Greg
maintainer:         gb@example.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proto-docser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Types, EncodeDocument

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson >= 2.1.2.1,
                      base ^>=4.17.1.0,
                      bytestring >= 0.11.4.0,
                      ghc >= 9.4.5,
                      ghc-exactprint,
                      ghc-paths >= 0.1.0.12,
                      text >= 2.0.2,
                      unordered-containers,
                      unordered-containers >= 0.2.19.1
    hs-source-dirs:   app
    default-language: Haskell2010
